Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-236

maxInactivityDuration of Wire-Format is not supported by ActiveMQ-CPP2.2.5

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 2.2.5
    • 2.2.6, 3.0
    • Openwire
    • None
    • windows xp

    Description

      maxInactivityDuration argument in brokerurl is not processed by the wireformat factory

      Attachments

        Activity

          polygraph liu jun added a comment -

          Just set a value into OpenWireFormatFactory::createWireFormat , then maxInactivityDuration is effect .

          polygraph liu jun added a comment - Just set a value into OpenWireFormatFactory::createWireFormat , then maxInactivityDuration is effect .

          Resolved in trunk and the 2.x branch.

          tabish Timothy A. Bish added a comment - Resolved in trunk and the 2.x branch.

          People

            tabish Timothy A. Bish
            polygraph liu jun
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 1h
                1h
                Logged:
                Time Spent - Not Specified
                Not Specified