https://issues.apache.org/activemq/browse/AMQCPP-236

Adds max inactivity duration configuration to the wireformat URI for Openwire.

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/branches/activemq-cpp-2.x@764906 13f79535-47bb-0310-9956-ffa450edef68